# morning-glory

./: .clang_complete  .editorconfig  .gitignore  .gutctags  .ycm_extra_conf.py  README  build-pthread.bat  build-pthread.sh  build-stacktrace.bat  build-vs2019.bat  build.bat  build.cpp  build.sh  build_compression_test.bat  build_stacktrace.sh  build_test.bat  build_visualizer.bat  cba.txt  decode.bat  encode.bat  main-vs2019.sln  main.cpp  main.sln  mg_algorithm.h  mg_algorithm.inl  mg_args.cpp  mg_args.h  mg_array.h  mg_array.inl  mg_assert.cpp  mg_assert.h  mg_assert.inl  mg_bitops.h  mg_bitops.inl  mg_bitstream.h  mg_bitstream.inl  mg_common_types.cpp  mg_common_types.h  mg_dataset.cpp  mg_dataset.h  (+73 more)
inmemory/: inmemory.pde
run/: decode.bat  encode.bat
src/: app_compression_test.cpp  app_file_format_test.cpp  app_mixed_resolution_grid_test.cpp  app_visualizer.cpp  build.cpp  build_tests.cpp  main.cpp  mg_algorithm.h  mg_algorithm.inl  mg_all.cpp  mg_args.cpp  mg_args.h  mg_array.h  mg_array.inl  mg_assert.cpp  mg_assert.h  mg_assert.inl  mg_bitops.h  mg_bitops.inl  mg_bitstream.h  mg_bitstream.inl  mg_common.h  mg_common.inl  mg_common_types.cpp  mg_common_types.h  mg_common_types.inl  mg_data_types.h  mg_data_types.inl  mg_dataset.cpp  mg_dataset.h  mg_debugbreak.h  mg_encode.cpp  mg_encode.h  mg_enum.h  mg_enum.inl  mg_error.h  mg_error.inl  mg_expected.h  mg_expected.inl  mg_file_format.cpp  (+57 more)
src/bgfx/bgfx/examples/common/entry/: entry.cpp  input.cpp
src/bgfx/common/entry/: entry_p.h
src/bgfx/common/imgui/: imgui.cpp
src/bgfx/common/nanovg/: nanovg_bgfx.cpp
src/bgfx/lib/: astc.lib  bimgd.lib  bxd.lib  edtaa3.lib  etc1.lib  etc2.lib  iqa.lib  nvtt.lib  pvrtc.lib  squish.lib
src/bgfx/lib/cmake/bgfx/: bgfx-config-debug.cmake  bgfx-config.cmake
src/compress/: CMakeLists.txt  README.txt  cmake-command.bat  compress.cpp
src/lz4/: lz4_all.c
src/openjp3d/: openjp2.lib  openjp3d.h  openjp3d.lib  openjpeg.h
